--- a/app-emulation/virtualbox-bin/ChangeLog
+++ b/app-emulation/virtualbox-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/virtualbox-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/virtualbox-bin/ChangeLog,v 1.102 2011/02/03 07:47:55 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/virtualbox-bin/ChangeLog,v 1.103 2011/02/19 08:34:49 polynomial-c Exp $
+
+*virtualbox-bin-4.0.4 (18 Feb 2011)
+
+  18 Feb 2011; Lars Wendler <polynomial-c@gentoo.org>
+  -virtualbox-bin-4.0.0-r1.ebuild, +virtualbox-bin-4.0.4.ebuild:
+  Version bump. Removed old.
 
   03 Feb 2011; Thomas Kahle <tomka@gentoo.org> virtualbox-bin-3.2.12-r1.ebuild:
   x86 stable per bug 336465
