--- a/dev-ruby/rspec/ChangeLog
+++ b/dev-ruby/rspec/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.85 2011/02/02 14:15:08 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.86 2011/02/19 09:28:49 graaff Exp $
+
+*rspec-2.5.0 (19 Feb 2011)
+
+  19 Feb 2011; Hans de Graaff <graaff@gentoo.org> +rspec-2.5.0.ebuild:
+  Version bump.
 
   02 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org> rspec-2.4.0.ebuild:
   Add ruby19 support.
