--- a/net-libs/telepathy-farsight/ChangeLog
+++ b/net-libs/telepathy-farsight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/telepathy-farsight
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/telepathy-farsight/ChangeLog,v 1.15 2011/02/07 18:21:41 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/telepathy-farsight/ChangeLog,v 1.16 2011/02/19 11:24:38 pacho Exp $
+
+  19 Feb 2011; Pacho Ramos <pacho@gentoo.org> telepathy-farsight-0.0.15.ebuild:
+  Python fixes, use eapi3.
 
   07 Feb 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Add gnome to metadata as talked between us since empathy relies on this.
