--- a/dev-python/paramiko/ChangeLog
+++ b/dev-python/paramiko/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/paramiko
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.56 2011/02/19 17:04:58 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/paramiko/ChangeLog,v 1.57 2011/02/19 17:35:35 arfrever Exp $
+
+  19 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  paramiko-1.7.6.ebuild:
+  Restrict Jython ABIs.
 
   19 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   -files/paramiko-1.6.3-no-setuptools.patch,
