--- a/dev-perl/SQL-Abstract/ChangeLog
+++ b/dev-perl/SQL-Abstract/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/SQL-Abstract
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SQL-Abstract/ChangeLog,v 1.49 2011/01/14 16:37:50 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SQL-Abstract/ChangeLog,v 1.50 2011/02/19 18:45:42 xarthisius Exp $
+
+  19 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  SQL-Abstract-1.720.ebuild:
+  Mark ~ppc wrt #345435
 
   14 Jan 2011; Torsten Veller <tove@gentoo.org> -SQL-Abstract-1.67.ebuild,
   -SQL-Abstract-1.68.ebuild, -SQL-Abstract-1.71.ebuild:
