--- a/dev-util/gtest/ChangeLog
+++ b/dev-util/gtest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gtest
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gtest/Attic/ChangeLog,v 1.10 2011/01/21 16:07:20 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gtest/Attic/ChangeLog,v 1.11 2011/02/20 09:36:53 xarthisius Exp $
+
+  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> gtest-1.5.0.ebuild:
+  Marked ~ppc/~ppc64 wrt #342513
 
   21 Jan 2011; Jeroen Roovers <jer@gentoo.org> gtest-1.5.0.ebuild:
   Stable for HPPA (bug #350290).
