--- a/dev-tex/latexmk/ChangeLog
+++ b/dev-tex/latexmk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/latexmk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/latexmk/ChangeLog,v 1.22 2011/02/15 23:07:52 ottxor Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/latexmk/ChangeLog,v 1.23 2011/02/20 09:40:16 xarthisius Exp $
+
+  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> latexmk-422e.ebuild:
+  Marked ~ppc/~ppc64 wrt #342513
 
 *latexmk-422e (15 Feb 2011)
 
