--- a/media-plugins/gmpc-extraplaylist/ChangeLog
+++ b/media-plugins/gmpc-extraplaylist/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-extraplaylist
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.15 2011/02/17 13:53:59 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.16 2011/02/20 15:34:08 xarthisius Exp $
+
+  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  gmpc-extraplaylist-0.20.0.ebuild:
+  ppc stable wrt #325621
 
   17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gmpc-extraplaylist-0.20.0.ebuild:
