--- a/media-plugins/gmpc-alarm/ChangeLog
+++ b/media-plugins/gmpc-alarm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-alarm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-alarm/ChangeLog,v 1.18 2011/02/20 15:33:15 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-alarm/ChangeLog,v 1.19 2011/02/20 17:37:08 phajdan.jr Exp $
+
+  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gmpc-alarm-0.20.0.ebuild:
+  x86 stable wrt bug #325621
 
   20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gmpc-alarm-0.20.0.ebuild:
