--- a/media-plugins/gmpc-extraplaylist/ChangeLog
+++ b/media-plugins/gmpc-extraplaylist/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-extraplaylist
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.16 2011/02/20 15:34:08 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.17 2011/02/20 17:38:45 phajdan.jr Exp $
+
+  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gmpc-extraplaylist-0.20.0.ebuild:
+  x86 stable wrt bug #325621
 
   20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gmpc-extraplaylist-0.20.0.ebuild:
