--- a/media-plugins/gmpc-jamendo/ChangeLog
+++ b/media-plugins/gmpc-jamendo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-jamendo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-jamendo/ChangeLog,v 1.5 2011/02/17 13:54:14 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-jamendo/ChangeLog,v 1.6 2011/02/20 17:39:10 phajdan.jr Exp $
+
+  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gmpc-jamendo-0.20.0.ebuild:
+  x86 stable wrt bug #325621
 
   17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gmpc-jamendo-0.20.0.ebuild:
