--- a/sys-libs/readline/ChangeLog
+++ b/sys-libs/readline/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/readline
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/readline/ChangeLog,v 1.162 2011/02/16 09:36:03 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/readline/ChangeLog,v 1.163 2011/02/20 17:47:12 phajdan.jr Exp $
+
+  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  readline-6.1_p2.ebuild:
+  x86 stable wrt bug #354939
 
   16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> readline-6.1_p2.ebuild:
   Stable on amd64 wrt bug #354939
