--- a/sci-mathematics/coq/ChangeLog
+++ b/sci-mathematics/coq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/coq
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/coq/ChangeLog,v 1.60 2011/02/20 07:36:09 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/coq/ChangeLog,v 1.61 2011/02/20 17:57:47 phajdan.jr Exp $
+
+  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> coq-8.3_p1.ebuild:
+  x86 stable wrt bug #355539
 
   20 Feb 2011; Thomas Kahle <tomka@gentoo.org> coq-8.2_p2.ebuild,
   +files/coq-8.2_p2-camlp5-6-compat.patch:
