--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.81 2011/02/20 03:26:03 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.82 2011/02/20 22:07:37 zmedico Exp $
+
+  20 Feb 2011; Zac Medico <zmedico@gentoo.org> qemu-0.14.0.ebuild:
+  Bug #355589 - Fix qemu-ifup die logic.
 
   20 Feb 2011; Luca Barbato <lu_zero@gentoo.org> qemu-0.14.0.ebuild:
   Fix description
