--- a/app-arch/sharutils/ChangeLog
+++ b/app-arch/sharutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/sharutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.70 2011/02/11 19:37:35 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.71 2011/02/20 22:13:41 maekke Exp $
+
+  20 Feb 2011; Markus Meier <maekke@gentoo.org> sharutils-4.10.ebuild:
+  arm stable, bug #353870
 
   11 Feb 2011; Markos Chandras <hwoarang@gentoo.org> sharutils-4.10.ebuild:
   Stable on amd64 wrt bug #353870
