--- a/dev-ruby/sinatra/ChangeLog
+++ b/dev-ruby/sinatra/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sinatra
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.13 2011/02/16 07:15:59 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.14 2011/02/21 06:56:57 graaff Exp $
+
+*sinatra-1.1.3 (21 Feb 2011)
+
+  21 Feb 2011; Hans de Graaff <graaff@gentoo.org> +sinatra-1.1.3.ebuild:
+  Version bump.
 
 *sinatra-1.1.2 (16 Feb 2011)
 
