--- a/sys-apps/ethtool/ChangeLog
+++ b/sys-apps/ethtool/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/ethtool
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/ethtool/ChangeLog,v 1.59 2011/02/20 17:32:27 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/ethtool/ChangeLog,v 1.60 2011/02/21 06:57:21 phajdan.jr Exp $
+
+  21 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  ethtool-2.6.36.ebuild:
+  x86 stable wrt bug #355713
 
 *ethtool-2.6.37 (20 Feb 2011)
 
