--- a/app-crypt/WiRouterKeyRec/ChangeLog
+++ b/app-crypt/WiRouterKeyRec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/WiRouterKeyRec
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.2 2011/02/17 21:10:58 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.3 2011/02/21 14:02:33 c1pher Exp $
+
+  21 Feb 2011; Dane Smith <c1pher@gentoo.org> WiRouterKeyRec-1.0.3.ebuild:
+  Fix typo in DESCRIPTION wrt bug 355591.
 
   17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   WiRouterKeyRec-1.0.3.ebuild:
