--- a/dev-ruby/parsetree/ChangeLog
+++ b/dev-ruby/parsetree/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/parsetree
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/parsetree/ChangeLog,v 1.37 2011/02/19 08:30:10 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/parsetree/ChangeLog,v 1.38 2011/02/21 19:20:54 hwoarang Exp $
+
+  21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> parsetree-3.0.6.ebuild:
+  Stable on amd64 wrt bug #355299
 
 *parsetree-3.0.7 (19 Feb 2011)
 
