--- a/dev-ruby/ruby-inline/ChangeLog
+++ b/dev-ruby/ruby-inline/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-inline
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-inline/Attic/ChangeLog,v 1.35 2011/02/19 08:30:41 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-inline/Attic/ChangeLog,v 1.36 2011/02/21 19:20:29 hwoarang Exp $
+
+  21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> ruby-inline-3.8.6.ebuild:
+  Stable on amd64 wrt bug #355299
 
 *ruby-inline-3.9.0 (19 Feb 2011)
 
