--- a/dev-ruby/actionmailer/ChangeLog
+++ b/dev-ruby/actionmailer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/actionmailer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.152 2011/02/13 21:18:21 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.153 2011/02/21 19:42:10 graaff Exp $
+
+  21 Feb 2011; Hans de Graaff <graaff@gentoo.org>
+  actionmailer-2.3.10.ebuild, +files/actionmailer-2.3.10-rails3.patch:
+  Fix tests when Rails 3 is also present.
 
   13 Feb 2011; Thomas Kahle <tomka@gentoo.org> actionmailer-3.0.3.ebuild:
   keyworded ~x86 per bug 351835
