--- a/dev-ruby/actionmailer/ChangeLog
+++ b/dev-ruby/actionmailer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/actionmailer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.153 2011/02/21 19:42:10 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionmailer/ChangeLog,v 1.154 2011/02/21 20:10:46 graaff Exp $
+
+*actionmailer-2.3.11 (21 Feb 2011)
+
+  21 Feb 2011; Hans de Graaff <graaff@gentoo.org>
+  +actionmailer-2.3.11.ebuild:
+  Version bump for Rails 2.3.11.
 
   21 Feb 2011; Hans de Graaff <graaff@gentoo.org>
   actionmailer-2.3.10.ebuild, +files/actionmailer-2.3.10-rails3.patch:
