--- a/net-misc/ofono/ChangeLog
+++ b/net-misc/ofono/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/ofono
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/ofono/ChangeLog,v 1.28 2011/02/15 10:28:05 dagger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/ofono/ChangeLog,v 1.29 2011/02/22 14:06:17 dagger Exp $
+
+*ofono-0.43 (22 Feb 2011)
+
+  22 Feb 2011; Robert Piasek <dagger@gentoo.org> -ofono-0.39.ebuild,
+  +ofono-0.43.ebuild:
+  Add version 0.43 
 
 *ofono-0.42 (15 Feb 2011)
 
