--- a/dev-php5/pecl-yaml/ChangeLog
+++ b/dev-php5/pecl-yaml/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/pecl-yaml
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-yaml/Attic/ChangeLog,v 1.2 2011/02/21 07:27:38 olemarkus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-yaml/Attic/ChangeLog,v 1.3 2011/02/22 14:06:25 olemarkus Exp $
+
+*pecl-yaml-1.0.1 (22 Feb 2011)
+
+  22 Feb 2011; Ole Markus With <olemarkus@gentoo.org>
+  -pecl-yaml-1.0.0.ebuild, +pecl-yaml-1.0.1.ebuild:
+  Version bump
 
 *pecl-yaml-1.0.0 (21 Feb 2011)
 
