--- a/net-misc/rygel/ChangeLog
+++ b/net-misc/rygel/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/rygel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/rygel/ChangeLog,v 1.6 2011/01/23 23:07:19 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/rygel/ChangeLog,v 1.7 2011/02/22 22:05:42 eva Exp $
+
+*rygel-0.9.9 (22 Feb 2011)
+
+  22 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> -rygel-0.8.2.ebuild,
+  -rygel-0.9.1.ebuild, +rygel-0.9.9.ebuild:
+  Version bump.
 
 *rygel-0.9.6 (23 Jan 2011)
 
