--- a/sys-kernel/git-sources/ChangeLog
+++ b/sys-kernel/git-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1077 2011/02/23 01:45:07 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1078 2011/02/23 14:32:22 mpagano Exp $
+
+*git-sources-2.6.38_rc6-r2 (23 Feb 2011)
+
+  23 Feb 2011; Mike Pagano <mpagano@gentoo.org>
+  git-sources-2.6.38_rc6-r1.ebuild, +git-sources-2.6.38_rc6-r2.ebuild:
+  Version bump
 
 *git-sources-2.6.38_rc6-r1 (23 Feb 2011)
 *git-sources-2.6.38_rc6 (23 Feb 2011)
