--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.272 2011/02/14 23:22:41 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.273 2011/02/23 16:32:37 jer Exp $
+
+  23 Feb 2011; Jeroen Roovers <jer@gentoo.org> cairo-1.10.2-r1.ebuild:
+  Stable for HPPA (bug #354237).
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   cairo-1.10.2-r1.ebuild:
