--- a/x11-proto/xf86driproto/ChangeLog
+++ b/x11-proto/xf86driproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/xf86driproto
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.47 2011/02/14 14:07:47 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.48 2011/02/23 16:41:13 jer Exp $
+
+  23 Feb 2011; Jeroen Roovers <jer@gentoo.org> xf86driproto-2.1.1.ebuild:
+  Stable for HPPA (bug #354237).
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   xf86driproto-2.1.1.ebuild:
