--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.313 2011/02/14 23:45:47 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.314 2011/02/23 16:43:48 jer Exp $
+
+  23 Feb 2011; Jeroen Roovers <jer@gentoo.org> xterm-267.ebuild:
+  Stable for HPPA (bug #354237).
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> xterm-267.ebuild:
   ppc stable wrt #344827, #354237
