--- a/x11-wm/twm/ChangeLog
+++ b/x11-wm/twm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/twm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.61 2011/02/15 13:33:40 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/twm/ChangeLog,v 1.62 2011/02/23 16:44:13 jer Exp $
+
+  23 Feb 2011; Jeroen Roovers <jer@gentoo.org> twm-1.0.6.ebuild:
+  Stable for HPPA (bug #354237).
 
   15 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -twm-1.0.4.ebuild:
   remove old
