--- a/app-text/ghostscript-gpl/ChangeLog
+++ b/app-text/ghostscript-gpl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/ghostscript-gpl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.108 2011/02/01 19:02:39 tgurr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.109 2011/02/23 22:12:07 tgurr Exp $
+
+*ghostscript-gpl-9.01 (23 Feb 2011)
+
+  23 Feb 2011; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-9.00.ebuild,
+  +ghostscript-gpl-9.01.ebuild:
+  Version bump, remove old.
 
 *ghostscript-gpl-9.00-r1 (01 Feb 2011)
 
