--- a/app-text/gnome-doc-utils/ChangeLog
+++ b/app-text/gnome-doc-utils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnome-doc-utils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.177 2011/01/11 20:31:12 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.178 2011/02/23 22:40:32 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  gnome-doc-utils-0.20.4.ebuild:
+  Stable on amd64 wrt bug #353436
 
 *gnome-doc-utils-0.20.4 (11 Jan 2011)
 
