--- a/gnome-base/libgnomecanvas/ChangeLog
+++ b/gnome-base/libgnomecanvas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libgnomecanvas
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.138 2011/02/03 23:21:02 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomecanvas/ChangeLog,v 1.139 2011/02/23 22:53:36 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  libgnomecanvas-2.30.3.ebuild:
+  Stable on amd64 wrt bug #353436
 
   03 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
   libgnomecanvas-2.30.3.ebuild:
