--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.183 2011/01/12 22:14:05 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.184 2011/02/23 23:07:05 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libgphoto2-2.4.10.ebuild:
+  Stable on amd64 wrt bug #353436
 
   12 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org> libgphoto2-2.4.10.ebuild:
   Change selective cameras build logic. Builds all when CAMERAS is set to *,
