--- a/net-nntp/pan/ChangeLog
+++ b/net-nntp/pan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/pan
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.80 2011/02/23 22:23:24 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.81 2011/02/23 23:12:01 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> pan-0.133-r1.ebuild:
+  Stable on amd64 wrt bug 353436
 
 *pan-0.134 (23 Feb 2011)
 
