--- a/x11-themes/gnome-themes/ChangeLog
+++ b/x11-themes/gnome-themes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-themes
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.241 2011/01/24 16:38:35 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gnome-themes/ChangeLog,v 1.242 2011/02/23 23:15:01 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  gnome-themes-2.32.1.ebuild:
+  Stable on amd64 wrt bug #353436
 
   24 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org>
   gnome-themes-2.32.1.ebuild:
