--- a/app-office/abiword/ChangeLog
+++ b/app-office/abiword/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/abiword
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.234 2011/02/13 14:39:39 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.235 2011/02/23 23:15:42 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> abiword-2.8.6-r1.ebuild:
+  Stable on amd64 wrt bug #353436
 
 *abiword-2.8.6-r1 (13 Feb 2011)
 
