--- a/dev-python/papyon/ChangeLog
+++ b/dev-python/papyon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/papyon
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/papyon/ChangeLog,v 1.18 2011/02/07 19:50:41 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/papyon/ChangeLog,v 1.19 2011/02/23 23:20:12 hwoarang Exp $
+
+  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> papyon-0.5.4.ebuild:
+  Stable on amd64 wrt bug #353436
 
 *papyon-0.5.4 (07 Feb 2011)
 
