--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.689 2011/02/22 13:53:01 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.690 2011/02/24 13:59:29 aballier Exp $
+
+  24 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
+  metadata.xml:
+  add android useflag
 
   22 Feb 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
   metadata.xml:
