--- a/media-gfx/gimp/ChangeLog
+++ b/media-gfx/gimp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.320 2011/02/23 06:56:47 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.321 2011/02/24 14:58:43 phajdan.jr Exp $
+
+  24 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gimp-2.6.11-r1.ebuild:
+  x86 stable wrt security bug #350915
 
   23 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> gimp-2.6.11-r1.ebuild:
   ppc/ppc64 stable wrt #350915
