--- a/app-admin/gnome-system-tools/ChangeLog
+++ b/app-admin/gnome-system-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/gnome-system-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.99 2011/02/23 22:38:32 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.100 2011/02/24 18:32:30 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
+  gnome-system-tools-2.32.0.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gnome-system-tools-2.32.0.ebuild:
