--- a/app-arch/file-roller/ChangeLog
+++ b/app-arch/file-roller/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/file-roller
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.288 2011/02/23 22:38:47 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.289 2011/02/24 18:32:59 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> file-roller-2.32.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> file-roller-2.32.1.ebuild:
   Stable on amd64 wrt bug #353436
