--- a/app-cdr/brasero/ChangeLog
+++ b/app-cdr/brasero/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/brasero
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.121 2011/02/23 22:39:02 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/brasero/ChangeLog,v 1.122 2011/02/24 18:33:46 tomka Exp $
+
+  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> brasero-2.32.1.ebuild:
+  x86 stable per bug 353436
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> brasero-2.32.1.ebuild:
   Stable on amd64 wrt bug #353436
